package com.masarnovsky.big.mvvm.viewmodel

import com.masarnovsky.big.mvvm.BackgroundColor
import com.masarnovsky.big.mvvm.InputFont
import com.masarnovsky.big.mvvm.Orientation

val defaultInputFont = InputFont.MONTSERRAT
val defaultBackgroundColor = BackgroundColor.BLACK
val defaultOrientation = Orientation.LANDSCAPE
const val space = " "
const val ellipsis = "..."
const val maxAmountOfSymbolsOnShowButton = 15
const val inputTextMaxAmount = 200
const val maxLinesToTryLandscapeDefault = 8
const val maxLinesToTryPortraitDefault = 20