...
    return when {
        text.length > maxAmountOfSymbolsOnShowButton -> space + text.take(
            maxAmountOfSymbolsOnShowButton
        ) + ellipsis

        text.isNotEmpty() -> space + text
        else -> "input text to show"
    }
}
